--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-echo "joblib"
+IMDbPY==2022.7.9
+matplotlib==3.7.2
+numpy==1.24.3
+pandas==2.0.3
+scikit_learn==1.0.2
+streamlit==1.32.0
+joblib==1.4.2
