--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 joblib==1.4.2
 streamlit==1.32.1
-pandas==2.0.3
 gdown==5.2.0
 sklearn==1.5.2
+pandas==2.2.3
+matplotlib==3.9.2
+seaborn==0.13.2
+folium==0.18.0
+scikit-learn==1.5.2
+xgboost==2.1.2
+lightgbm==4.5.0
